Reason fixes added

--- a/sigmaCabs/app/views/dispatches/vehicleVacantForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleVacantForm.html
@@ -7,7 +7,7 @@
     </div>
     <div class="fieldContainer relative right" style="width:180px;">
         <label class="labelCompact">Vacant Time</label>
-        <span>{{vehicleMainDetails.details.vacantTime}}</span>
+        <span>{{vehicleMainDetails.details.vacantTimeText}}</span>
     </div>
     <p class="clear" />
     <div class="fieldContainer relative left" style="width:180px;">
