Fixed multiple issues from mantis

--- a/sigmaCabs/app/views/bookings/customerRequestMain.html
+++ b/sigmaCabs/app/views/bookings/customerRequestMain.html
@@ -47,11 +47,11 @@
                         </div>
                         <div class="fieldContainer left relative  ">
                             <label class="labelCompact">Pickup</label>
-                            <input data-ng-model="regularRequestDetails.pickupPlace" type="text"class="left validate[required,maxSize[128]] textFieldCompact" />
+                            <input googleplace data-ng-model="regularRequestDetails.pickupPlace" type="text"class="left validate[required,maxSize[128]] textFieldCompact" />
                         </div>
                         <div class="fieldContainer left relative  ">
                             <label class="labelCompact">Drop</label>
-                            <input data-ng-model="regularRequestDetails.dropPlace" type="text"class="left validate[required,maxSize[128]] textFieldCompact" />
+                            <input googleplace data-ng-model="regularRequestDetails.dropPlace" type="text"class="left validate[required,maxSize[128]] textFieldCompact" />
                         </div>
                         <div class="fieldContainer left relative  ">
                             <label class="labelCompact">No. of Days</label>
