Dispatch: Mantis fixes added.

--- a/sigmaCabs/app/views/dispatches/vehicleVacantForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleVacantForm.html
@@ -16,7 +16,7 @@
     </div>
     <div class="fieldContainer relative right" style="width:180px;">
         <label class="labelCompact" title="Overall Break Time">Overall BT</label>
-        <span>{{vehicleMainDetails.details.breakTime}}</span>
+        <span>{{vehicleMainDetails.details.overAllBreakTimeText}}</span>
     </div>
     <p class="clear" />
     <div class="fieldContainer relative left" style="width:180px;">
